# rt_chat

./: .gitignore  CMakeLists.txt  docker-compose.yml
client/: Dockerfile
client/src/: App.tsx
consumer/: Cargo.toml
consumer/src/: main.rs
http_server/: Cargo.toml  Dockerfile  package-lock.json  package.json
http_server/migrations/: 1710050970665-CreateUser.ts
http_server/src/: app.module.ts  main.rs
http_server/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  constants.ts
http_server/src/cats/: cats.controller.ts  cats.service.ts
http_server/src/cats/dto/: create-cat.dto.ts
http_server/src/controllers/: user_controller.rs
http_server/src/database/: db_client.rs
http_server/src/models/: user.rs
http_server/src/user/: user.controller.ts  user.entity.ts  user.module.ts  user.service.ts
http_server/src/user/dto/: create-user.dto.ts  login-user.dto.ts
include/input/: login_input.h
include/ui/: chat_ui.h
include/utils/: cursor.h  thread_helper.h
server/: Cargo.toml  Dockerfile
server/src/: main.rs
src/: main.c
src/input/: chat_input.c  login_input.c
src/ui/: chat_ui.c  login_ui.c
src/utils/: cursor.c  network_manager.c
term_client/: build.sh
term_client/include/ui/: chat_ui.h  login_ui.h
term_client/include/utils/: cursor.h
term_client/src/: a.out  main.c
term_client/src/input/chat/: chat_input.c  (+1 more)
term_client/src/ui/: chat_ui.c
term_client/src/utils/: cursor.c  cursor.h  network_manager.c  thread_helper.c  thread_helper.h
websocket_server/: Cargo.toml
websocket_server/src/: main.rs
(+15 files in other folders)
