[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
lapin = "2.3.1"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
